--- a/Sangoi_B_7.rmd
+++ b/Sangoi_B_7.rmd
@@ -2,7 +2,9 @@
 title: "Assignment 7"
 author: "Bhakti Sangoi"
 date: "February 25, 2018"
-output: pdf_document
+output:
+  pdf_document: default
+  word_document: default
 ---
 
 #Libraries
@@ -20,47 +22,108 @@ library(readxl)
 
 ###Solution
 
-Two web scraping toolkits tried are:
+Three web scraping toolkits tried are:
 1) Instant Data Scarper
 2) Grepsr
+3) Import.io
 
-Instant Data Scarper is easy to use and quite fast, hence I continued this assignment using Instant Data Scarper
+Import.io is a great tool to learn and has lot of options to get an accurate dataset.Hence I continued this assignment using Import.io
+I have also used Instant Data Scarper because it is easy to use and quite fast. 
 
 
 ##B.	(20 points) Import the data you extracted into a data frame in R. Your data frame should have exactly 30 rows, and each row represents a burger restaurant in Boston.
 
 ###Solution
 
+##Using Import.io
+
 ###1) Open https://www.yelp.com/boston. Search for Burgers and limit Boston neighborhoods to Allston, Brighton, Back Bay, Beacon Hill, Downtown Area, Fenway, South End, and West End.
-```{r}
+```{r fig.width=50, fig.height=30}
 image1 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/yelp_filter.png")
 plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
 rasterImage(image1,0,0,1,1)
 ```
 
-###2) Renaming the column heading and selecting the required columns to be scraped.
-```{r}
+###2) Copying the URL in Import.io toolkit
+```{r fig.width=50, fig.height=30}
+import_image2 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_extractor.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image2,0,0,1,1)
+
+```
+
+###3) Data is loaded into the toolkit
+```{r fig.width=50, fig.height=30}
+import_image3 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_extractload.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image3,0,0,1,1)
+```
+
+###4) Selecting the required fields, deselecting Ads and editing column name
+```{r fig.width=50,fig.height=30}
+import_image4 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_select.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image4,0,0,1,1)
+```
+
+###5)Entering NA's 
+```{r fig.width=50, fig.height=30}
+import_image5 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/entering_NA.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image5,0,0,1,1)
+```
+
+###6)Pagination and Running the job with 3 URL's and having exact 30 rows
+```{r fig.width=50, fig.height=30}
+import_image6 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_runurl.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image6,0,0,1,1)
+```
+
+###7) Download format
+```{r fig.width=50, fig.height=30}
+import_image7 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_format.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image7,0,0,1,1)
+```
+
+###8) View the dataset in Import.io tool
+```{r fig.width=50, fig.height=30}
+import_image8 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_data.png")
+plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
+rasterImage(import_image8,0,0,1,1)
+```
+
+###9) Viewing Dataset in R
+```{r fig.width=50, fig.height=30}
+importyelp_dataset <- read.csv("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/import.io/import_yelp.csv")
+View(importyelp_dataset)
+```
+
+##Using Instant Data Scraper
+###1) Renaming the column heading and selecting the required columns to be scraped.
+```{r fig.width=50, fig.height=30}
 image2 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/instant_scraper1.png")
 plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
 rasterImage(image2,0,0,1,1)
 ```
 
-###3) Selecting how many pages to crawl and then scraping 3 pages for 30 rows.
-```{r}
+###2) Selecting how many pages to crawl and then scraping 3 pages for 30 rows.
+```{r fig.width=50, fig.height=30}
 image3 <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/instant_scraper2.png")
 plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
 rasterImage(image3,0,0,1,1)
 ```
 
-###4) Downloading in csv format and then Viewing the csv file
-```{r}
+###3) Downloading in csv format and then Viewing the csv file
+```{r fig.width=50, fig.height=30}
 csv_image <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/yelp_csv.png")
 plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
 rasterImage(csv_image,0,0,1,1)
 ```
 
-###5)Reading the csv file
-```{r}
+###4)Reading the csv file
+```{r fig.width=50, fig.height=30}
 yelp_dataset <- read.csv("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/yelp_scraper.csv")
 View(yelp_dataset)
 ```
@@ -69,12 +132,13 @@ View(yelp_dataset)
 
 ###Solution
 
-Instant Data Scraper and Grepsr both are found in Google chrome extension. 
+Import.io is the tool available on net whereas Instant Data Scraper and Grepsr both are found in Google chrome extension. All the 3 tools has different ways of using it.
+
 
 ###Grepsr Toolkit
 ###Cost:
 It can be downloaded for free. It has different monthly plans. It has free plan which helps in creating 3 free reports per month.
-```{r}
+```{r fig.width=50, fig.height=30}
 grepsr_cost <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/grepsr_cost.png")
 plot(0:1,0:1,type="n",ann=FALSE,axes=FALSE)
 rasterImage(grepsr_cost,0,0,1,1)
@@ -89,7 +153,7 @@ Further it has different options of pagination like "Next link"", "infinite scro
 Then you can extract and download the data in different formats such as csv,JSON, XML, Excel formats
 There are different downloading options by sending it via dropbox, google drive, dropbox.
 Scrap the data and then group it accordingly.
-```{r}
+```{r fig.width=50, fig.height=30}
 grepsr_selection <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/grepsr_selection.png")
 grepsr_pagination <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/grepsr_pagination.png")
 grepsr_fileformat <- readPNG("C:/Users/sango/Documents/Desktop/R/Assignments/Assignment 7/grepsr_fileformat.png")
@@ -117,13 +181,29 @@ Then start crawling the number of pages you want to scrap.
 Delete the unwanted fields anytime during scraping.
 Download it in csv or excel.
 
+###Import.io
+###Cost
+It has a 7 day trial. Then It has different monthly/yearly plans.
+
+###Ease of Use
+It has an online dashboard and reports to scrap the data of the url you want to. It has a lot of various features for advance data scraping. It is easy to understand and use. It is a very flexible tool.
+
+###Features
+It has a feature of selecting whatever is required. 
+Creating new columns as per our requirement. 
+One can also add NA's in blanks which helps in cleaning up the dataset. 
+You can also Combine columns which is similar to doing binding in R. 
+It has an option of adding more URL to add data in same dataset after running the job once. It can be extracted in csv, excel and json.
+
 ###Comparing
-Instant Data Scraper came out to be very user friendly. One can easily edit, remove unwanted columns and use it. It is very quick. It guesses all the required data very well.
-Grepsr is little time consuming in selecting what tags are needed for scraping. It was many different format options to save data. But pagination is tricky to understand. Both are google chrome extensions.
+- Import.io has lot of features which is easy to use and gives a better result as required by the user. It can be done in few clicks. It's a perfect tool for students to learn Data Scraping.
+- Grepsr is little time consuming in selecting what tags are needed for scraping. It was many different format options to save data. But pagination is tricky to understand. Both are google chrome extensions.
+- Instand Data scraper is user friendly and very simple for beginners. It guesses the data not very well. There aren't many options as compared to import.io to edit your rows and columns. Can't insert NA's in blanks in both grepsr and instant data scraper. It can remove unwanted columns easily but not add columns.
 
 ###Recommendation
-Grepsr should have better documentation or tour guide on how to use. It should be more user friendly. It should improve its options to scrap more pages together. Also it should have some guessing crawler data options which becomes faster and easy for user.
-
+- Grepsr should have better documentation or tour guide on how to use. It should be more user friendly. It should improve its options to scrap more pages together. Also it should have some guessing crawler data options which becomes faster and easy for user.
+- Instand Data scraper is for beginners. Should have an option to add the columns atleast which gives better result as the user wants
+ 
 
 ##D.	(10 points) Within your report describe what you have derived about the URL for yelp pages. What are the differences between the three URLs? What are the parameters that determined your search query (Boston burger restaurants in 8 selected neighborhoods)? What is(are) the parameter(s) used for pagination? Without opening Yelp.com in the browser, what is your guess of the URL for the 7th page of Chinese restaurants in New York?
 
